--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,11 @@
 {
   "dependencies": {
-    "@prisma/client": "^4.3.1",
-    "express": "^4.18.1"
+    "@types/cors": "^2.8.12",
+    "cors": "^2.8.5",
+    "express": "^4.18.1",
+    "mysql2": "^2.3.3",
+    "sequelize": "^6.23.0",
+    "sqlite3": "^5.1.1"
   },
   "name": "server",
   "version": "1.0.0",
@@ -16,7 +20,6 @@
   "description": "",
   "devDependencies": {
     "@types/express": "^4.17.14",
-    "prisma": "^4.3.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.3"
   }
