--- a/app/package.json
+++ b/app/package.json
@@ -21,6 +21,7 @@
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
+    "react-native-calendars": "^1.1289.0",
     "react-native-reanimated-carousel": "^3.0.6",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
