--- a/app/app.json
+++ b/app/app.json
@@ -4,7 +4,7 @@
     "slug": "app",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/Soccer_logo.png",
     "userInterfaceStyle": "light",
     "splash": {
       "image": "./assets/splash.png",
@@ -18,17 +18,18 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.jojoka.app"
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./assets/Soccer_logo.png",
         "backgroundColor": "#FFFFFF"
       },
       "package": "com.jojoka.app"
     },
     "web": {
-      "favicon": "./assets/favicon.png"
+      "favicon": "./assets/Soccer_logo.png"
     },
     "extra": {
       "eas": {
