--- a/app/package.json
+++ b/app/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@agendapro/react-native-events-calendar": "^0.6.0",
     "@expo/webpack-config": "^0.17.0",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.13",
@@ -22,6 +23,8 @@
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
     "react-native-calendars": "^1.1289.0",
+    "react-native-events-calendar": "^1.0.8",
+    "react-native-paper": "^5.0.0-rc.8",
     "react-native-reanimated-carousel": "^3.0.6",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
