--- a/app/app.json
+++ b/app/app.json
@@ -4,11 +4,11 @@
     "slug": "app",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/Soccer_logo.png",
+    "icon": "./assets/Logo.png",
     "userInterfaceStyle": "light",
     "splash": {
       "image": "./assets/splash.png",
-      "resizeMode": "contain",
+      "resizeMode": "cover",
       "backgroundColor": "#ffffff"
     },
     "updates": {
@@ -23,13 +23,13 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/Soccer_logo.png",
-        "backgroundColor": "#FFFFFF"
+        "foregroundImage": "./assets/Logo.png",
+        "backgroundColor": "#ffffff"
       },
       "package": "com.jojoka.app"
     },
     "web": {
-      "favicon": "./assets/Soccer_logo.png"
+      "favicon": "./assets/Logo.png.png"
     },
     "extra": {
       "eas": {
