--- a/app/package.json
+++ b/app/package.json
@@ -28,6 +28,7 @@
     "react-native-reanimated-carousel": "^3.0.6",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
+    "react-native-select-dropdown": "^3.0.1",
     "react-native-snap-carousel": "^4.0.0-beta.6",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.7"
