--- a/app/package.json
+++ b/app/package.json
@@ -31,7 +31,8 @@
     "react-native-select-dropdown": "^3.0.1",
     "react-native-snap-carousel": "^4.0.0-beta.6",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "~0.18.7"
+    "react-native-web": "~0.18.7",
+    "expo-font": "~10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
