--- a/server/package.json
+++ b/server/package.json
@@ -1,9 +1,17 @@
 {
   "dependencies": {
     "@types/cors": "^2.8.12",
+    "@types/jsonwebtoken": "^8.5.9",
+    "@types/passport": "^1.0.11",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.1",
+    "express-jwt": "^7.7.7",
+    "express-session": "^1.17.3",
+    "jsonwebtoken": "^8.5.1",
+    "jwks-rsa": "^3.0.0",
     "mysql2": "^2.3.3",
+    "passport": "^0.6.0",
     "sequelize": "^6.23.0",
     "sqlite3": "^5.1.1",
     "ts-newsapi": "^1.0.0"
@@ -21,6 +29,7 @@
   "description": "",
   "devDependencies": {
     "@types/express": "^4.17.14",
+    "@types/express-jwt": "^7.4.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.3"
   }
