--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,9 @@
     "@types/cors": "^2.8.12",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/passport": "^1.0.11",
+    "axios": "^1.1.3",
     "cors": "^2.8.5",
+    "cross-fetch": "^3.1.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "express-jwt": "^7.7.7",
@@ -11,6 +13,7 @@
     "jsonwebtoken": "^8.5.1",
     "jwks-rsa": "^3.0.0",
     "mysql2": "^2.3.3",
+    "node-fetch": "^3.2.10",
     "passport": "^0.6.0",
     "sequelize": "^6.23.0",
     "sqlite3": "^5.1.1",
