--- a/app/package.json
+++ b/app/package.json
@@ -18,6 +18,7 @@
     "@types/react-native-snap-carousel": "^3.8.5",
     "axios": "^0.27.2",
     "expo": "~46.0.13",
+    "expo-font": "~10.2.0",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
@@ -30,9 +31,9 @@
     "react-native-screens": "~3.15.0",
     "react-native-select-dropdown": "^3.0.1",
     "react-native-snap-carousel": "^4.0.0-beta.6",
+    "react-native-timeline-flatlist": "^0.8.0",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "~0.18.7",
-    "expo-font": "~10.2.0"
+    "react-native-web": "~0.18.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
