--- a/app/package.json
+++ b/app/package.json
@@ -15,15 +15,20 @@
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
     "@react-navigation/stack": "^6.3.2",
+    "@types/react-native-dotenv": "^0.2.0",
     "@types/react-native-snap-carousel": "^3.8.5",
     "axios": "^0.27.2",
+    "dotenv": "^16.0.3",
     "expo": "~46.0.13",
+    "expo-constants": "^14.0.2",
     "expo-font": "~10.2.0",
     "expo-status-bar": "~1.4.0",
+    "native-base": "^3.4.21",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
     "react-native-calendars": "^1.1289.0",
+    "react-native-dotenv": "^3.4.2",
     "react-native-events-calendar": "^1.0.8",
     "react-native-paper": "^5.0.0-rc.8",
     "react-native-reanimated-carousel": "^3.0.6",
@@ -31,6 +36,7 @@
     "react-native-screens": "~3.15.0",
     "react-native-select-dropdown": "^3.0.1",
     "react-native-snap-carousel": "^4.0.0-beta.6",
+    "react-native-svg": "12.3.0",
     "react-native-timeline-flatlist": "^0.8.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.7"
@@ -39,6 +45,7 @@
     "@babel/core": "^7.12.9",
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.69.1",
+    "babel-plugin-transform-inline-environment-variables": "^0.4.4",
     "typescript": "~4.3.5"
   },
   "private": true
