logica do login parece funcionar

--- a/app/package.json
+++ b/app/package.json
@@ -23,10 +23,12 @@
     "expo-constants": "^14.0.2",
     "expo-font": "~10.2.0",
     "expo-status-bar": "~1.4.0",
+    "jwt-decode": "^3.1.2",
     "native-base": "^3.4.21",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
+    "react-native-auth0": "^2.15.0",
     "react-native-calendars": "^1.1289.0",
     "react-native-dotenv": "^3.4.2",
     "react-native-events-calendar": "^1.0.8",
@@ -35,6 +37,7 @@
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-select-dropdown": "^3.0.1",
+    "react-native-sensitive-info": "^5.5.8",
     "react-native-snap-carousel": "^4.0.0-beta.6",
     "react-native-svg": "12.3.0",
     "react-native-timeline-flatlist": "^0.8.0",
